tests/ui/hrtb/hrtb-coercion-output-nested-unsound.stderr
error[E0308]: mismatched types
  --> $DIR/hrtb-coercion-output-nested-unsound.rs:13:92
   |
LL |     let foo3: for<'input> fn(&'static (), &'input T) -> (&'input &'input (), &'static T) = foo2;
   |               --------------------------------------------------------------------------   ^^^^ types differ
   |               |
   |               expected due to this
   |
   = note: expected fn pointer `for<'input> fn(&'static (), &'input _) -> (&'input &'input (), &'static _)`
              found fn pointer `for<'input> fn(&'static (), &'input _) -> (&'static &'input (), &'static _)`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
